feat: add read.md

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,25 +1,35 @@
-# Server
+# PlayerPlus Platform Backend - 环境变量配置
+# 直接复制为 .env 即可使用
+
+# ===================
+# Server 配置
+# ===================
 PORT=8080
 
-# Database (Railway Postgres - public URL for local dev)
+# ===================
+# Database 配置
+# ===================
+# PostgreSQL 连接字符串 (Railway)
 DATABASE_URL=postgresql://postgres:PJlRLUBRtfsEDJVAgQnPFLgMubPFLuXp@nozomi.proxy.rlwy.net:28246/railway
 
-# VModel API (Primary - Face Swap)
+# ===================
+# VModel API 配置 (视频换脸)
+# ===================
 VMODEL_API_TOKEN=QSPuI_VGr4YH79s_tAN8vSkSMunQWp_KwRSOjMUnN1qr25q8P6UKQuAefn2NTJwVL550ZT_Kc8k-jjlihigaRg==
 VMODEL_BASE_URL=https://api.vmodel.ai
 
-# Akool API (Legacy - kept for fallback)
-AKOOL_CLIENT_ID=Who53A7haVnMN43CW50AkA==
-AKOOL_API_KEY=fZbVy5rS0ljkD45AVIfb3nQiGEi5K0MU
-AKOOL_BASE_URL=https://openapi.akool.com
-AKOOL_DETECT_URL=https://sg3.akool.com
-
-# MinIO Storage (Railway)
+# ===================
+# MinIO Storage 配置
+# ===================
 MINIO_PUBLIC_ENDPOINT=https://bucket-production-acf6.up.railway.app
 MINIO_ROOT_USER=3ukek3OZKpC302Q6tSDtZzUqrRGLtW7m
 MINIO_ROOT_PASSWORD=AUL3zDTxWbEhcQ1Y5YhUL7pE8ONxxNLtImbz0ePngGbCRyWf
 BUCKET_NAME=playerplus-media
 STORAGE_PUBLIC_URL=https://bucket-production-acf6.up.railway.app
 
-# Resend (Email) - Optional, leave empty to skip email verification
+# ===================
+# Email 配置 (可选)
+# ===================
+# Resend API Key - 用于邮箱验证码登录
+# 如果为空，将跳过邮箱验证
 RESEND_API_KEY=
