--- a/backend/.env
+++ b/backend/.env
@@ -4,15 +4,9 @@ PORT=8080
 # Database (Railway Postgres - public URL for local dev)
 DATABASE_URL=postgresql://postgres:PJlRLUBRtfsEDJVAgQnPFLgMubPFLuXp@nozomi.proxy.rlwy.net:28246/railway
 
-# VModel API (Primary - Face Swap)
+# VModel API (Face Swap)
 VMODEL_API_TOKEN=QSPuI_VGr4YH79s_tAN8vSkSMunQWp_KwRSOjMUnN1qr25q8P6UKQuAefn2NTJwVL550ZT_Kc8k-jjlihigaRg==
 VMODEL_BASE_URL=https://api.vmodel.ai
-
-# Akool API (Legacy - kept for fallback)
-AKOOL_CLIENT_ID=Who53A7haVnMN43CW50AkA==
-AKOOL_API_KEY=fZbVy5rS0ljkD45AVIfb3nQiGEi5K0MU
-AKOOL_BASE_URL=https://openapi.akool.com
-AKOOL_DETECT_URL=https://sg3.akool.com
 
 # MinIO Storage (Railway)
 MINIO_PUBLIC_ENDPOINT=https://bucket-production-acf6.up.railway.app
